# forest-cli

./: .forestignore  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  cli.ts  forest-lock.json  forest.json  forest_installer.iss  idea.txt  package-lock.json  package.json  production.env  tsconfig.json
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
plugins/forestpm/: README.md
plugins/forestpm/.claude-plugin/: plugin.json
plugins/forestpm/skills/forestpm/: SKILL.md
scripts/: bench.ps1  release.ts  sign-release.sh
src/: cache.rs  contracts.rs  fetch_and_extract.rs  http.rs  install_plan.rs  licensce_helper.rs  license_helper.rs  lockfile_gen.rs  lockfile_solver.rs  main.rs  message.rs  platform.rs  receipts.rs  release_verify.rs  tokens.rs  utils.rs
src/commands/: audit.rs  initialize.rs  install.rs  install.ts  login.rs  login.ts  logout.rs  mod.rs  publish.rs  publish.ts  remove.rs  update.rs  whoami.rs
src/roblox/: extract.rs  init.rs  install.rs  mod.rs  plan.rs  publish.rs  receipts.rs  wally.rs
src/uefn/: init.rs  install.rs  mod.rs  plan.rs  publish.rs
src/utils/: httpHelper.ts  lockfileGen.ts  logger.ts
tests/: fixtures-manifest.json  fixtures-manifest.json.sig
ts/: esbuild.config.js  forest.json  package-lock.json  package.json  solver.ts  tsconfig.json
ts/src/: cli.ts
ts/src/commands/: initialize.ts  install.ts  publish.ts
ts/src/utils/: fetchAndExtract.ts  httpHelper.ts  lockfileGen.ts
