[package]
name = "forest"
version = "0.1.0"
edition = "2021"
authors = ["Forest Software LLC"]
description = "Forest CLI – Package manager"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "blocking", "rustls-tls", "rustls-tls-webpki-roots"] }
tar = "0.4"
flate2 = { version = "1.0", features = ["miniz_oxide"] }
anyhow = "1.0"
dotenvy = "0.15"
open = "3.2"
rpassword = "7.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0"          # for locating the home directory
serde_json = "1.0"
dialoguer = "0.11.0"
colored = "3.0.0"
indicatif = "0.17.11"
urlencoding = "2.1.3"
semver = "1.0.26"
walkdir = "2.5.0"
ignore = "0.4.23"
version-ranges = "0.1"