[package]
name = "forest"
version = "1.6.0"
edition = "2021"
authors = ["Forest Software LLC"]
description = "Forest CLI – Package manager"
license = "LICENSE"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "blocking", "rustls-tls", "rustls-tls-webpki-roots", "gzip"] }
tar = "0.4"
flate2 = { version = "1.0", features = ["miniz_oxide"] }
anyhow = "1.0"
dotenvy = "0.15"
open = "3.2"
rpassword = "7.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0"          # for locating the home directory
serde_json = "1.0"
dialoguer = "0.11.0"
colored = "3.0.0"
indicatif = "0.17.11"
urlencoding = "2.1.3"
semver = "1.0.26"
walkdir = "2.5.0"
ignore = "0.4.23"
version-ranges = "0.1"
chrono = "0.4.42"
self-replace = "1"    # atomic self-replacement for `forest update` (handles Windows)
sha2 = "0.10"         # verify downloaded binaries against the release manifest
ssh-key = { version = "0.6", default-features = false, features = ["std", "alloc", "p256", "ed25519"] }  # verify offline-signed release manifests (sshsig)
toml = "0.8"          # parse wally.toml for the wally-to-forest import offer

[dev-dependencies]
rand_core = { version = "0.6", features = ["std"] }  # throwaway keys for signature tests

[profile.release]
lto = "thin"          # fat LTO would blow up the 4-target release build time
codegen-units = 1
strip = true
# no `panic = "abort"`: the download join loop catches worker panics
